# HumanTracking

./: pyproject.toml
src/: main.py
