[project]
name = "humantracking"
version = "0.1.0"
description = ""
authors = [
    {name = "Lampower",email = "lampower.kirill@gmail.com"}
]
requires-python = "3.14.5"
dependencies = [
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "numpy (>=2.4.5,<3.0.0)",
    "triton (>=3.7.0,<4.0.0)",
    "ultralytics (>=8.4.51,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
